...
              style={[
                styles.buttonText,
                { color: colors.text.inverse },
                Typography.headline,
              ]}
            >
              Continue
            </Text>
          </TouchableOpacity>
        </Animated.View>
      </View>
    </Modal>
  );
...
