...
  Text,
  Modal,
  TouchableOpacity,
  StyleSheet,
  Dimensions,
  AccessibilityInfo,
  Share,
} from 'react-native';
import Animated, {
  useSharedValue,
  useAnimatedStyle,
  withSpring,
  withTiming,
...
